# NanoPascal

./: .gitignore  CMakeLists.txt  ast.h  ast_inter.cpp  grammar.txt  lexer.h  main_lexer.cpp  parser.cpp  parser.h
AST/: CMakeLists.txt  ast.h  ast_inter.cpp  ast_inter.h  kinds.h  main.cpp  test_defines.h
DFA/: comments.jff  constants.jff  identifiers.jff  start.jff  template.h
Examples/: ArithmeticOperators.pas  BitOperators.pas  BoolOperators.pas  Directives.pas  HelloWorld.pas  NestedDirectives.pas  RelOperators.pas  Test.pas  array.pas  gcd.pas  holamundo.txt  lexer_test.txt  lexer_test_2.txt
Lexer/: CMakeLists.txt  lexer.h  main.cpp
Lexer/DFA/: comments.jff  constants.jff  identifiers.jff  operators.jff  template.fa2l  template.h
Parser/: CMakeLists.txt  grammar.txt  main.cpp  parser.cpp  parser.h
